:wheelchair: Fixed chrome checkbox misalignment

--- a/src/components/TodoItem/todoItem.scss
+++ b/src/components/TodoItem/todoItem.scss
@@ -8,6 +8,7 @@
 }
 
 input[type="checkbox"] {
+    margin: auto;
     cursor: pointer;
 }
 
